2009-01-31  Mario Blättermann  <mariobl@svngnome.org>
	
	* docs/de/de.po: Small fix in German translation

2009-01-31  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (gnome_volume_applet_dock_new): Add a border around the
	dock.

	* applet.c (gnome_volume_applet_button): Double click -> toggle
	mute rather than launching the volume control. Mute is the more
	common command.

2009-01-27  Callum McKenzie  <callum@spooky-possum.org>

	* preferences.[ch]: 
	* load.c:
	* applet.[ch]: Remove gstreamer 0.8 support. Remove libgnome
	stuff.

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-12-02  Callum McKenzie  <callum@spooky-possum.org>

	* dock.[ch]: 
	* applet.[ch]: Hook the mute button into the system. Do some prep
	work to separate the applet object into a model and a
	viewer/control so the dock can also be a viewer/control on an
	equal footing. This will make some code a lot cleaner. Also hook
	up the new "Volume Control..." button.

2008-11-27  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (gnome_volume_applet_dock_new): Rotate the volume control
	dock 90 degrees. Replace the textual '+' and '-' with icons and
	make the whole slider bigger. Rework some of the code to be even
	more data-driven and remove duplication. Remove the table and use
	nested hboxen/vboxen. Add a checkbox for mute and a volume control
	button (unattached).

2008-11-22  Mario Blättermann  <mariobl@svngnome.org>
	
	* docs/de/de.po: Some fixes in German translation
 
2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* preferences.[ch]:
	* dock.[ch]:
	* applet.[ch]: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

2008-11-07  Mario Blättermann  <mariobl@svngnome.org>
	
	* docs/de/de.po: Added German translation
	* docs/Makefile.am: Added de to DOC_LINGUAS.