@@ -1,3 +1,14 @@
+2009-02-02  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c:
+	* dock.c: Make the dock popdown when it looses focus.
+
+2009-02-01  Callum McKenzie  <callum@spooky-possum.org>
+
+	* dock.c:
+	* applet.c: Always make the dock horizontal since there doesn't
+	appear to be an easy way to rotate the mute check-box.
+
 2009-01-31  Mario Blättermann  <mariobl@svngnome.org>
 	
 	* docs/de/de.po: Small fix in German translation
